 NEWS/ChangeLog for rJava
--------------------------

0.8-8	(under development)
    o	Add support for r.arch in RJavaClassLoader on Windows as well

0.8-7	2010-10-18
    o	Windows updates to accomodate changes in R 2.12 and layout
	changes in recent Sun Java installations.


0.8-6	2010-09-17
    o	JRI 0.5-4: rniStop() provides several ways to notify R on unix.
	It improves handing of user interrupts via rniStop() by
	allowing to avoid signals (signals can cause problems in some
	recent JVM implementations).

0.8-5	2010-09-02
    o	fix a bug introduced in 0.8-2 where .jclassPath() would not
	show the real class path

    o	if the rJava class loader is used as a primary loader it will
	also register as the context class loader. Some projects
	rely on the thread context class loader instead of
	Class.getClassLoader() [which is still more reliable] 
	so those will now work as well.

    o	JRI 0.5-3 (bugfixes)


0.8-4	2010-04-28
    o	JRI 0.5-2
	IMPORTANT NOTE: handling of NAs in character vectors has been
	fixed, NAs were	incorrectly passed as "NA" from R to Java
	instead of nulls (it was correct the other way round). Any
	code that relies on such incorrect behavior will need to be
	fixed!

	Other changes in JRI are mostly related to Windows support
	(bugfixes R 2.11.0 and Windows 64-bit support)

    o	run.bat is now installed as part of JRI

0.8-3	2010-03-16
    o	REngine and JRIEngine classes are now included in rJava/JRI
	although they are not loaded by default.

    o	.r2j now has convert parameter to allow the creation of
	pure references (convert=FALSE)

    o	toJava() is a new function equivalent to .r2j but resulting
	in REngine API references (instances of REXPReference).
	By default the references are not resolved since the primary
	use is to pass R functions to Java for callbacks.

    o	set text mode for stdin on Windows (thanks to Brian Ripley)

    o	fix support of NULL arguments in new(J("SomeClass"), ...)
