@@ -3,6 +3,9 @@
 
 0.8-8	(under development)
     o	Add support for r.arch in RJavaClassLoader on Windows as well
+    
+    o   javaImport was only able to import java packages from the system class
+        loader (not from additional jars)
 
 0.8-7	2010-10-18
     o	Windows updates to accomodate changes in R 2.12 and layout
